--- a/src/app/modules/transferencias/transferencia-form/transferencia-form.component.scss
+++ b/src/app/modules/transferencias/transferencia-form/transferencia-form.component.scss
@@ -224,3 +224,31 @@
     gap: 1rem;
   }
 }
+
+// Estilos para Angular Material Autocomplete
+::ng-deep .mat-mdc-form-field {
+  width: 100%;
+}
+
+::ng-deep .mat-mdc-text-field-wrapper {
+  padding: 0;
+}
+
+::ng-deep .mat-mdc-form-field-infix {
+  min-height: 48px;
+}
+
+.full-width {
+  width: 100%;
+}
+
+// Estilos para las opciones del autocomplete
+::ng-deep .mat-mdc-autocomplete-panel {
+  max-height: 300px;
+}
+
+::ng-deep .mat-mdc-option {
+  font-size: 0.95rem;
+  line-height: 1.4;
+  padding: 12px 16px;
+}
