--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,6 @@
+/* Importar tema de Angular Material */
+@import '@angular/material/prebuilt-themes/indigo-pink.css';
+
 /* Reset y estilos globales */
 * {
   margin: 0;
