correccion para errores en produccion segundo intento

--- a/src/app/modules/ligas/ligas-detail/ligas-detail.component.html
+++ b/src/app/modules/ligas/ligas-detail/ligas-detail.component.html
@@ -63,7 +63,7 @@
       </div>
     </div>
 
-    <div class="actions" *ngIf="isMaster || liga.directivo.id === (authService.getCurrentUser()?.id)">
+    <div class="actions" *ngIf="isMaster || liga.directivo?.id === (authService.getCurrentUser()?.id)">
       <button class="btn-primary" (click)="editLiga()">
         ✏️ Editar Liga
       </button>
